syntax = "proto3";

package internal.proto.v1;

option go_package = "internal/proto/gen/v1;protov1";

// SystemService 系统服务
service SystemService {
  // GetSystemInfo 获取系统信息
  rpc GetSystemInfo(SystemInfoRequest) returns (SystemInfoResponse) {}
}

// SystemInfoRequest 系统信息请求
message SystemInfoRequest {
  // 请求ID
  string request_id = 1;
}

// SystemInfoResponse 系统信息响应
message SystemInfoResponse {
  // 应用名称
  string app_name = 1;
  // 应用版本
  string version = 2;
  // 运行模式
  string mode = 3;
  // 服务器时间
  int64 server_time = 4;
}
